完善逻辑部分
